[package]
name = "cents"
version = "0.1.0"
authors = ["Nathan A Sculli <nathan@vegasbuckeye.com>"]
description = "A small crate for handling monetary values as in integer number of cents."
homepage = "https://gitlab.com/buckeye/cents"
repository = "https://gitlab.com/buckeye/cents"
keywords = [ "money", "accounting", "financial", "number" ]
categories = [ "accounting", "financial" ]
license = "LICENSE-MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
